<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp">


    <ImageView
        android:id="@+id/background"
        android:layout_width="337dp"
        android:layout_height="610dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@drawable/custome_input2" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/down" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/broshk"
        android:text="@string/ANDROID"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="23dp" />

    <TextView
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/broshk"
        android:text="@string/SUNTHU"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="23dp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/day"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/broshk"
        android:text="@string/time101"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="23dp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/broshk"
        android:text="@string/course_info"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="23dp" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/broshk"
        android:text="@string/android_course_info"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="23dp" />


    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="110dp"
        android:src="@drawable/android" />

    <ImageView
        android:id="@+id/more"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/desc"
        android:layout_marginStart="40dp"
        android:src="@drawable/more" />

    <ImageView
        android:id="@+id/dollar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/more"
        android:layout_marginStart="50dp"
        android:src="@drawable/dollar" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/more"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/dollar"
        android:fontFamily="@font/broshk"
        android:text="@string/price_android"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="25dp" />

    <Button
        android:id="@+id/attendButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/white"
        android:text="@string/ATTENDNOW"
        android:textColor="@color/blue" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">


            <RadioButton
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/gray"
                android:text="@string/public_" />

            <RadioButton
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/private_" />


    </RadioGroup>

</RelativeLayout>