<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/username"
        android:fontFamily="@font/broshk"
        android:hint="@string/USERNAME"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="center"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/lock"
        android:fontFamily="@font/broshk"
        android:hint="@string/PASSWORD"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="center"
        android:textColorHint="@color/gray" />

    <TextView
        android:id="@+id/forget_pass"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="108dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/broshk"
        android:text="@string/FORGETPASSWORD"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/account"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget_pass"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/broshk"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account"
        android:layout_marginStart="140dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/broshk"
        android:text="@string/SIGNUP"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/broshk"
        android:text="@string/CLEVERWAY"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:src="@drawable/login" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/ICT"
        android:textColor="@color/white"
        android:fontFamily="@font/broshk"
        />

</RelativeLayout>